--- a/cicar.css
+++ b/cicar.css
@@ -1,3 +1,6 @@
+
+
+
 .black{
     width: 100%;
     height: 70px;
@@ -32,12 +35,27 @@ h3{
 
 .article1{
     width: 100%;
-   border: 1px solid rgb(231, 216, 216)
+   border: 1px solid rgb(231, 216, 216);
+   margin: 10px;
+   padding-bottom: 0 !important;
 }
 
-.article1 img{
+/* התמונה שאמורה להיות בימין */
+.article1 .img-r {
+    float: right;         /* הוספנו: הפקודה שחובה שתהיה כאן */
     width: 180px;
     height: 100px;
+    display: block;       
+    margin-bottom: 0 !important; 
+}
+
+/* התמונה שאמורה להיות בשמאל */
+.article1 .img-l {
+    float: left;          /* קיימת אצלך וזה מצוין */
+    width: 180px;
+    height: 100px;
+    display: block;       
+    margin-bottom: 0 !important; 
 }
 
 
@@ -45,9 +63,14 @@ h3{
     width: 100%;
    border: 1px solid rgb(231, 216, 216);
    /* מכריח את הדיב להיות לפחות בגודל של האלמנט שבפנים  */
-    /* overflow: auto;    */
+    overflow: auto;   
+    padding-bottom: 0 !important;
 }
 
+.article2 h2, .article2 p {
+    margin-bottom: 0 !important;
+    margin-top: 5px; /* אפשר להשאיר מרווח קטן למעלה אם רוצים */
+}
 
 .article2 .right-img{
     width: 180px;
@@ -63,6 +86,7 @@ h3{
     width: 180px;
     height: 100px;
     float: left;
+    
    
     
 }
